--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,13 @@
 .env.local
 .env.development.local
 .env.test.local
-.env.production.loca
+.env.production.local
+service-account.json
+diagrams.png
+ComplexAppToKubernetes.png
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/o-document
