--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - docker build -t henrymcbean/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run henrymcbean/react-test npm -- --coverage
+  - docker run -e CI=true henrymcbean/react-test npm
 
 deploy:
   provider: script
