--- a/k8s/ingress-service.yml
+++ b/k8s/ingress-service.yml
@@ -17,22 +17,22 @@ spec:
     - host: henrymcbean.com
       http:
         paths:
-          - path: /?(.*)
+          - path: /
             backend:
               serviceName: client-cluster-ip-service
               servicePort: 3000
-          - path: /api/?(.*)
+          - path: /api/
             backend:
               serviceName: server-cluster-ip-service
               servicePort: 5000
     - host: www.henrymcbean.com
       http:
         paths:
-          - path: /?(.*)
+          - path: /
             backend:
               serviceName: client-cluster-ip-service
               servicePort: 3000
-          - path: /api/?(.*)
+          - path: /api/
             backend:
               serviceName: server-cluster-ip-service
               servicePort: 5000
