--- a/k8s/ingress-service.yml
+++ b/k8s/ingress-service.yml
@@ -5,17 +5,17 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
-    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
+    # cert-manager.io/cluster-issuer: 'letsencrypt-prod'
+    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
-  tls:
-    - hosts:
-        - henrymcbean.com
-        - www.henrymcbean.com
-      secretName: henrymcbean.com
+  # tls:
+  #  - hosts:
+  #      - henrymcbean.com
+  #      - www.henrymcbean.com
+  #    secretName: henrymcbean.com
   rules:
-    - host: henrymcbean.com
-      http:
+    # - host: henrymcbean.com
+    - http:
         paths:
           - path: /?(.*)
             backend:
@@ -25,14 +25,14 @@ spec:
             backend:
               serviceName: server-cluster-ip-service
               servicePort: 5000
-    - host: www.henrymcbean.com
-      http:
-        paths:
-          - path: /?(.*)
-            backend:
-              serviceName: client-cluster-ip-service
-              servicePort: 3000
-          - path: /api/?(.*)
-            backend:
-              serviceName: server-cluster-ip-service
-              servicePort: 5000
+    # - host: www.henrymcbean.com
+    #  http:
+    #    paths:
+    #      - path: /?(.*)
+    #        backend:
+    #          serviceName: client-cluster-ip-service
+    #          servicePort: 3000
+    #      - path: /api/?(.*)
+    #        backend:
+    #          serviceName: server-cluster-ip-service
+    #          servicePort: 5000
