--- a/k8s/issuer.yml
+++ b/k8s/issuer.yml
@@ -2,11 +2,15 @@ apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
-  namespace: cert-manager
+  labels:
+    name: letsencrypt-prod
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: 'henry_mcbean@hotmail.com'
     privateKeySecretRef:
       name: letsencrypt-prod
-    http01: {}
+    solvers:
+      - http01: 
+          ingress:
+            class: nginx    
